--- a/frontend/src/stylesheets/datePicker.css
+++ b/frontend/src/stylesheets/datePicker.css
@@ -3,19 +3,20 @@
   color: #969eac;
   font-size: 1rem;
   font-family: "Mulish";
+}
 
-  .react-datepicker__month {
-    padding: 1rem 0;
-  }
+.react-datepicker__month {
+  padding: 1rem 0;
+}
 
-  .react-datepicker__month-text {
-    display: inline-block;
-    width: 5rem;
-    margin: 0.5rem;
-    font-size: 1rem;
-    padding: 0.2rem;
-    &:hover {
-      background-color: #534cea;
-    }
-  }
+.react-datepicker__month-text {
+  display: inline-block;
+  width: 5rem;
+  margin: 0.5rem;
+  font-size: 1rem;
+  padding: 0.2rem;
+}
+
+.react-datepicker__month-text:hover {
+  background-color: #534cea;
 }
