--- a/frontend/src/stylesheets/Overview.css
+++ b/frontend/src/stylesheets/Overview.css
@@ -18,3 +18,12 @@
 .border-bottom.py-2.px-3 {
   background-color: rgba(189, 191, 191, 0.1);
 }
+
+.instruction-icon {
+  color: rgba(255,255,255,0.7);
+}
+
+.instruction-icon:hover {
+  color: white;
+  cursor: pointer;
+}
